# meshdenoiser

./: .gitignore  CMakeLists.txt  MeshDenoiserDefaults.txt  Package.swift  README.md  vcpkg.json
.github/workflows/: build.yml
LICENSES/: MeshSDFilter-BSD-3-Clause.txt
Sources/CMeshDenoiserCore/: CMeshDenoiserCore.cpp
Sources/CMeshDenoiserCore/include/: CMeshDenoiserCore.h
Sources/MeshDenoiserBench/: main.swift
Sources/MeshDenoiserKit/: MeshAssetDenoiser.swift  MeshDenoiseError.swift  MeshDenoiseParameters.swift  MeshDenoiser.swift  MeshDenoiserKit.swift  MeshPreprocessor.swift
Sources/MeshDenoiserNative/: FilterCPU.swift  FilterGPU.swift  FilterKernels.metal  FilterPrecompute.swift  GuidanceNormals.swift  MeshConnectivity.swift  MeshNormalization.swift  MeshValidation.swift  NativeBenchmarkSupport.swift  NativeDenoiser.swift  NativeTypes.swift  NeighborSearch.swift  VertexUpdate.swift
Sources/MeshDenoiserProcess/: main.swift
Sources/OpenMeshCore/: LICENSE.txt
Sources/OpenMeshCore/Core/: CMakeLists.txt
Sources/OpenMeshCore/Core/IO/reader/: BaseReader.cc  OBJReader.cc  PLYReader.cc
Sources/OpenMeshCore/Core/IO/writer/: BaseWriter.cc  PLYWriter.cc  STLWriter.cc
Sources/OpenMeshCore/Core/Utils/: PropertyManager.hh
Sources/OpenMeshCore/Headers/OpenMesh/Core/Geometry/: Vector11T.hh
Sources/OpenMeshCore/include/: OpenMeshCoreShim.h
Tests/MeshDenoiserKitTests/: AssetProcessorCLITests.swift  BenchmarkCLITests.swift  DenoiseContractTests.swift  FilterCPUTests.swift  FilterPrecomputeTests.swift  GPUParityTests.swift  GoldenParityTests.swift  GuidanceNormalsTests.swift  MeshAssetDenoiserTests.swift  MeshConnectivityTests.swift  MeshPreprocessorTests.swift  NativeParityTests.swift  NativeValidationTests.swift  NeighborSearchTests.swift  OBJLoader.swift  PlaceholderTests.swift  VertexUpdateTests.swift
cmake/: FetchDependencies.cmake  FetchMeshSDFilter.cmake
docs/superpowers/plans/: 2026-06-12-meshdenoiserkit-swift-package.md  2026-06-12-native-swift-metal-port.md  2026-06-13-swift-metal-port-analysis-plan.md
docs/superpowers/specs/: 2026-06-12-meshdenoiserkit-swift-package-design.md  2026-06-12-native-swift-metal-port-design.md
overrides/MeshSDFilter/: MeshDenoiser.cpp
scripts/: generate_test_fixture.py  vendor_dependencies.sh
src/: AppMetrics.h  EigenTypes.h  MeshDenoiser.cpp  MeshNormalDenoising.h  MeshNormalFilter.h  MeshTypes.h  SDFilter.h
